fixed header issue
fixed header issue.

to fix:
1. logo disappeared from header.
2. radio buttons taking up too much space
3. checkmark box too big and right-aligned
4. main site image taking up too much space

--- a/css/store.css
+++ b/css/store.css
@@ -1,7 +1,7 @@
 
 /* main */
 
-main {
+.main_store {
     display: flex;
     flex-direction: row;
     margin:0;
@@ -68,7 +68,6 @@ fieldset {
     width:100%;
     margin-bottom: 2rem;
 }
-
 
 .colour_section {
     margin: 2rem 0 7rem 0;
